fix z-index

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -3646,7 +3646,7 @@ small, .small {
 	color: var(--muted);
 	font-weight: 600;
 	font-size: 12px;
-	z-index: 3;
+	z-index: 1000;
 }
 .dropdown-actions .fa, .dropdown-actions .fas, .dropdown-actions .far {
 	font-size: 12px;
